# kan-extensions

./: .gitignore  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  Control-Comonad-Density.html  Control-Monad-Co.html  Control-Monad-Codensity.html  Data-Functor-Contravariant-Coyoneda.html  Data-Functor-Contravariant-Day.html  Data-Functor-Contravariant-Yoneda-Reduction.html  Data-Functor-Contravariant-Yoneda.html  Data-Functor-Coyoneda.html  Data-Functor-Day.html  Data-Functor-Kan-Lan.html  Data-Functor-Kan-Lift.html  Data-Functor-Kan-Ran.html  Data-Functor-Kan-Rift.html  Data-Functor-Yoneda-Reduction.html  Data-Functor-Yoneda.html  README.markdown  cabal.haskell-ci  doc-index.html  index-frames.html  index.html  kan-extensions.cabal  kan-extensions.haddock  mini_Control-Comonad-Density.html  mini_Control-Monad-Co.html  mini_Control-Monad-Codensity.html  mini_Data-Functor-Contravariant-Coyoneda.html  mini_Data-Functor-Contravariant-Day.html  mini_Data-Functor-Contravariant-Yoneda-Reduction.html  mini_Data-Functor-Contravariant-Yoneda.html  mini_Data-Functor-Coyoneda.html  mini_Data-Functor-Day.html  mini_Data-Functor-Kan-Lan.html  mini_Data-Functor-Kan-Lift.html  mini_Data-Functor-Kan-Ran.html  mini_Data-Functor-Kan-Rift.html  mini_Data-Functor-Yoneda-Reduction.html  (+1 more)
.github/workflows/: haskell-ci.yml
Control/Comonad/: Density.hs
Control/Monad/: Co.hs  Codensity.hs
Control/Monad/Free/: Church.hs
Data/Functor/: KanExtension.hs  Yoneda.hs
Data/Functor/Yoneda/: Contravariant.hs
src/: Control-Comonad-Density.html  Control-Monad-Co.html  Control-Monad-Codensity.html  Data-Functor-Contravariant-Coyoneda.html  Data-Functor-Contravariant-Day.html  Data-Functor-Contravariant-Yoneda-Reduction.html  Data-Functor-Contravariant-Yoneda.html  Data-Functor-Coyoneda.html  Data-Functor-Day.html  Data-Functor-Kan-Lan.html  Data-Functor-Kan-Lift.html  Data-Functor-Kan-Ran.html  Data-Functor-Kan-Rift.html  Data-Functor-Yoneda-Reduction.html  Data-Functor-Yoneda.html
src/Control/Comonad/: Density.hs
src/Control/Monad/: Co.hs  Codensity.hs
src/Data/Functor/: Coyoneda.hs  Day.hs  KanExtension.hs  KanLift.hs  Yoneda.hs
src/Data/Functor/Contravariant/: Coyoneda.hs  Day.hs  Yoneda.hs
src/Data/Functor/Contravariant/Kan/: Rift.hs
src/Data/Functor/Contravariant/Yoneda/: Reduction.hs
src/Data/Functor/Day/: Curried.hs
src/Data/Functor/Invariant/: Day.hs
src/Data/Functor/Kan/: Lan.hs  Lift.hs  Ran.hs  Rift.hs
src/Data/Functor/Yoneda/: Contravariant.hs  Reduction.hs
