name:          kan-extensions
category:      Data Structures, Monads, Comonads, Functors
version:       3.6.1
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/kan-extensions/
bug-reports:   http://github.com/ekmett/kan-extensions/issues
copyright:     Copyright (C) 2008-2013 Edward A. Kmett
synopsis:      Kan extensions, Kan lifts, various forms of the Yoneda lemma, and (co)density (co)monads
description:   Kan extensions, Kan lifts, various forms of the Yoneda lemma, and (co)density (co)monads
build-type:    Simple

extra-source-files:
  .travis.yml
  .gitignore
  .ghci
  .vim.custom
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/kan-extensions.git

library
  hs-source-dirs: src

  other-extensions:
    CPP
    MultiParamTypeClasses
    GADTs
    Rank2Types,
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    TypeFamilies

  build-depends:
    adjunctions            >= 3.0.0.1 && < 4,
    array                  >= 0.3.0.2 && < 0.5,
    base                   >= 4       && < 5,
    comonad                >= 3       && < 4,
    comonad-transformers   >= 3       && < 4,
    comonads-fd            >= 3       && < 4,
    containers             >= 0.4     && < 0.6,
    contravariant          >= 0.2.0.1 && < 1,
    distributive           >= 0.2.2   && < 1,
    free                   >= 3       && < 4,
    keys                   >= 3       && < 4,
    mtl                    >= 2.0.1   && < 2.2,
    pointed                >= 3       && < 4,
    representable-functors >= 3.0.0.1 && < 4,
    semigroupoids          >= 3       && < 4,
    speculation            >= 1.4.1   && < 2,
    transformers           >= 0.2     && < 0.4

  exposed-modules:
    Control.Comonad.Density
    Control.Monad.Co
    Control.Monad.Codensity
    Data.Functor.Contravariant.Yoneda.Reduction
    Data.Functor.Kan.Lan
    Data.Functor.Kan.Lift
    Data.Functor.Kan.Ran
    Data.Functor.Kan.Rift
    Data.Functor.Yoneda
    Data.Functor.Yoneda.Reduction

  ghc-options: -Wall

