name:          kan-extensions
category:      Data Structures, Monads, Comonads, Functors
version:       5.0.2
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/kan-extensions/
bug-reports:   http://github.com/ekmett/kan-extensions/issues
copyright:     Copyright (C) 2008-2016 Edward A. Kmett
synopsis:      Kan extensions, Kan lifts, various forms of the Yoneda lemma, and (co)density (co)monads
description:   Kan extensions, Kan lifts, various forms of the Yoneda lemma, and (co)density (co)monads
build-type:    Simple

extra-source-files:
  .travis.yml
  .gitignore
  .ghci
  .vim.custom
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/kan-extensions.git

library
  hs-source-dirs: src

  other-extensions:
    CPP
    MultiParamTypeClasses
    GADTs
    Rank2Types,
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    TypeFamilies

  build-depends:
    adjunctions   >= 4.2     && < 5,
    array         >= 0.3.0.2 && < 0.6,
    base          >= 4.4     && < 5,
    comonad       >= 4       && < 6,
    containers    >= 0.4     && < 0.6,
    contravariant >= 1       && < 2,
    distributive  >= 0.2.2   && < 1,
    fail          >= 4.9     && < 5,
    free          >= 4       && < 5,
    mtl           >= 2.0.1   && < 2.3,
    semigroupoids >= 4       && < 6,
    tagged        >= 0.7.2   && < 1,
    transformers  >= 0.2     && < 0.6

  exposed-modules:
    Control.Comonad.Density
    Control.Monad.Co
    Control.Monad.Codensity
    Data.Functor.Contravariant.Day
    Data.Functor.Contravariant.Yoneda
    Data.Functor.Contravariant.Coyoneda
    Data.Functor.Day
    Data.Functor.Day.Curried
    Data.Functor.Kan.Lan
    Data.Functor.Kan.Ran
    Data.Functor.Yoneda
    Data.Functor.Coyoneda

  ghc-options: -Wall

