name:          kan-extensions
category:      Data Structures, Monads, Comonads, Functors
version:       5.2.6
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/kan-extensions/
bug-reports:   http://github.com/ekmett/kan-extensions/issues
copyright:     Copyright (C) 2008-2016 Edward A. Kmett
synopsis:      Kan extensions, Kan lifts, the Yoneda lemma, and (co)density (co)monads
description:   Kan extensions, Kan lifts, various forms of the Yoneda lemma, and (co)density (co)monads.
build-type:    Simple
tested-with:   GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.5
             , GHC == 9.6.2

extra-source-files:
  .gitignore
  .vim.custom
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/kan-extensions.git

library
  hs-source-dirs: src

  other-extensions:
    CPP
    MultiParamTypeClasses
    GADTs
    Rank2Types,
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    TypeFamilies

  build-depends:
    adjunctions         >= 4.2     && < 5,
    array               >= 0.3.0.2 && < 0.6,
    base                >= 4.11    && < 5,
    comonad             >= 4       && < 6,
    containers          >= 0.4     && < 0.8,
    contravariant       >= 1       && < 2,
    distributive        >= 0.2.2   && < 1,
    invariant           >= 0.1     && < 1,
    free                >= 4       && < 6,
    mtl                 >= 2.2.1   && < 2.4,
    profunctors         >= 5       && < 6,
    semigroupoids       >= 5.2.2   && < 7,
    tagged              >= 0.7.2   && < 1,
    transformers        >= 0.5     && < 0.7

  exposed-modules:
    Control.Comonad.Density
    Control.Monad.Co
    Control.Monad.Codensity
    Data.Functor.Contravariant.Day
    Data.Functor.Contravariant.Yoneda
    Data.Functor.Contravariant.Coyoneda
    Data.Functor.Day
    Data.Functor.Day.Curried
    Data.Functor.Invariant.Day
    Data.Functor.Kan.Lan
    Data.Functor.Kan.Ran
    Data.Functor.Yoneda
    Data.Functor.Coyoneda

  ghc-options: -Wall -Wcompat -Wnoncanonical-monad-instances -Wno-trustworthy-safe
  if !impl(ghc >= 8.8)
    ghc-options: -Wnoncanonical-monadfail-instances

  default-language: Haskell2010
